--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap')
+@import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
 
 body {
   margin: 0;
